--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#fb1" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -27,7 +27,9 @@
     <title>Dogs</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >É nescessário habilitar o JavaScript para visualizar esse site.</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
